--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "nativephp/electron": "^0.8.7"
+        "nativephp/electron": "^0.8.7",
+        "spatie/github-actions-watcher": "^1.0",
+        "spatie/laravel-settings": "^3.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
