--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.5",
         "nativephp/electron": "^0.8.7",
         "spatie/github-actions-watcher": "^1.0",
         "spatie/laravel-settings": "^3.4"
