--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@alpinejs/collapse": "^3.14.3",
         "@formkit/auto-animate": "^0.8.2"
     }
 }
