--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,27 @@
-APP_NAME="workflow-monitor"
-APP_ENV=local
+APP_NAME="Git Relay"
+APP_ENV=production
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://git-relay.test
 
 GITHUB_CLIENT_ID=
+
+NATIVEPHP_APP_AUTHOR='Willem Leuverink'
+NATIVEPHP_APP_ID="ink.leuver.git-relay"
+NATIVEPHP_DEEPLINK_SCHEME=
+
+NATIVEPHP_APPLE_ID=
+NATIVEPHP_APPLE_ID_PASS=
+NATIVEPHP_APPLE_TEAM_ID=
+
+NATIVEPHP_UPDATER_ENABLED=false
+NATIVEPHP_UPDATER_PROVIDER=github
+
+GITHUB_PRIVATE=false
+GITHUB_REPO=git-relay
+GITHUB_OWNER=gwleuverink
+GITHUB_TOKEN=
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
