add logwatcher to dev command

--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,7 @@
         ],
         "native:dev": [
             "Composer\\Config::disableProcessTimeout",
-            "npx concurrently -k -c \"#93c5fd,#c4b5fd\" \"php artisan native:serve --no-interaction\" \"npm run dev\" --names=app,vite"
+            "npx concurrently -k -c \"#93c5fd,#fb7185,#fdba74\" \"php artisan native:serve --no-interaction\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=app,logs,vite"
         ],
         "format": [
             "npm run format",
