--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.0",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.18",
         "mockery/mockery": "^1.6",
@@ -64,6 +65,9 @@
         "format": [
             "npm run format",
             "./vendor/bin/pint"
+        ],
+        "analyze": [
+            "./vendor/bin/phpstan analyse"
         ]
     },
     "extra": {
