--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Git Relay"
+APP_NAME="Relay"
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=true
@@ -8,7 +8,7 @@ APP_URL=http://git-relay.test
 GITHUB_CLIENT_ID=
 
 NATIVEPHP_APP_AUTHOR='Willem Leuverink'
-NATIVEPHP_APP_ID="ink.leuver.git-relay"
+NATIVEPHP_APP_ID="ink.leuver.relay"
 NATIVEPHP_DEEPLINK_SCHEME=
 
 NATIVEPHP_APPLE_ID=
