add additional build steps

--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,13 @@
         ],
         "analyze": [
             "./vendor/bin/phpstan analyse"
+        ],
+        "publish": [
+            "truncate -s 0 ./storage/logs/laravel.log",
+            "composer run-script post-install-cmd",
+            "npm run build",
+            "@php artisan native:publish mac all",
+            "composer install --no-interaction"
         ]
     },
     "extra": {
@@ -81,6 +88,7 @@
         }
     },
     "config": {
+        "process-timeout":0,
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
