--- a/composer.json
+++ b/composer.json
@@ -78,6 +78,7 @@
             "truncate -s 0 ./storage/logs/laravel.log",
             "composer run-script post-install-cmd",
             "npm run build",
+            "@php artisan view:clear",
             "@php artisan native:publish mac all",
             "composer install --no-interaction"
         ]
