--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,8 @@ PHP_CLI_SERVER_WORKERS=4
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_STACK=daily
+LOG_DAILY_DAYS=7
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
