tweak configs for build

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ NATIVEPHP_UPDATER_ENABLED=true
 NATIVEPHP_UPDATER_PROVIDER=github
 
 GITHUB_PRIVATE=false
-GITHUB_REPO=git-relay
+GITHUB_REPO=relay
 GITHUB_OWNER=gwleuverink
 GITHUB_TOKEN=
 
@@ -40,8 +40,8 @@ LOG_DAILY_DAYS=7
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_DATABASE="database/nativephp.sqlite"
+# DB_CONNECTION=sqlite
+# DB_DATABASE="database/nativephp.sqlite"
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=604800
