--- a/.env.example
+++ b/.env.example
@@ -40,8 +40,8 @@ LOG_DAILY_DAYS=7
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=sqlite
-# DB_DATABASE="database/nativephp.sqlite"
+DB_CONNECTION=sqlite
+DB_DATABASE="database/nativephp.sqlite"
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=604800
