--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.3",
         "blade-ui-kit/blade-heroicons": "^2.5",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
-        "nativephp/electron": "^0.9",
+        "nativephp/electron": "^1.0.0",
         "spatie/laravel-settings": "^3.4"
     },
     "require-dev": {
@@ -72,13 +72,10 @@
         ],
         "native:publish": [
             "Composer\\Config::disableProcessTimeout",
-            "truncate -s 0 ./storage/logs/laravel.log",
-            "truncate -s 0 ./database/nativephp.sqlite",
             "composer run-script post-install-cmd",
             "npm run build",
             "@php artisan view:clear",
-            "@php artisan native:publish mac all",
-            "composer install --no-interaction"
+            "@php artisan native:publish mac all"
         ],
         "format": [
             "npm run format",
