zephpyr obfuscated bundles

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ NATIVEPHP_APPLE_TEAM_ID=
 NATIVEPHP_UPDATER_ENABLED=true
 NATIVEPHP_UPDATER_PROVIDER=github
 
+ZEPHPYR_KEY=
+ZEPHPYR_TOKEN=
+
 GITHUB_PRIVATE=false
 GITHUB_REPO=relay
 GITHUB_OWNER=gwleuverink
