--- a/composer.json
+++ b/composer.json
@@ -70,11 +70,15 @@
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -k -c \"#93c5fd,#fb7185,#fdba74\" \"php artisan native:serve --no-interaction\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=app,logs,vite"
         ],
-        "native:publish": [
+        "native:bundle": [
             "Composer\\Config::disableProcessTimeout",
             "composer run-script post-install-cmd",
             "npm run build",
-            "@php artisan view:clear",
+            "@php artisan native:bundle"
+        ],
+        "native:publish": [
+            "Composer\\Config::disableProcessTimeout",
+            "@php artisan native:bundle --fetch",
             "@php artisan native:publish mac all"
         ],
         "format": [
