--- a/composer.json
+++ b/composer.json
@@ -62,9 +62,10 @@
         "native:setup": [
             "cp .env.example .env",
             "npm install",
-            "@php composer.phar install",
+            "@php composer install",
             "@php artisan key:generate",
-            "@php artisan native:install --force"
+            "@php artisan native:install --force",
+            "@php artisan native:migrate"
         ],
         "native:dev": [
             "Composer\\Config::disableProcessTimeout",
