ignore platform reqs

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -48,6 +48,7 @@ jobs:
             - uses: php-actions/composer@v6
               with:
                   php_version: "8.3"
+                  args: --ignore-platform-reqs
 
             - name: Run static analysis
               run: composer analyze
